test/errors/scopes2.input.asm

* = $801

foo: {
    jmp _local_label
_local_label:
_local_label: ; duplicate
    rts
}
